--- a/readme.md.mustache
+++ b/readme.md.mustache
@@ -158,6 +158,23 @@ mapObject({start: 5, end: 12}, function(val, key, object) {
 => {start: 10, end: 17}
 ```
 
+## object ({{object}})
+
+```js
+var object = require('lowscore/object');
+object(list, [values]);
+```
+
+Converts arrays into objects. Pass either a single list of `[key, value]` pairs, or a list of keys, and a list of values. If duplicate keys exist, the last value wins.
+
+```js
+_.object(['moe', 'larry', 'curly'], [30, 40, 50]);
+=> {moe: 30, larry: 40, curly: 50}
+
+_.object([['moe', 30], ['larry', 40], ['curly', 50]]);
+=> {moe: 30, larry: 40, curly: 50}
+```
+
 ## flatten ({{flatten}})
 
 ```js
