--- a/readme.md.mustache
+++ b/readme.md.mustache
@@ -262,7 +262,7 @@ flatten([1, [2], [3, [[4]]]], true);
 
 ```js
 var max = require('lowscore/max');
-var smallestItem = max(items, iteratee);
+var smallestItem = max(items, [iteratee]);
 ```
 
 Returns the maximum value in list. If an iteratee function is provided, it will be used on each value to generate the criterion by which the value is ranked. -Infinity is returned if list is empty, so an isEmpty guard may be required. Non-numerical values in list will be ignored.
@@ -283,7 +283,7 @@ _.max(stooges, function(stooge){ return stooge.age; });
 
 ```js
 var min = require('lowscore/min');
-var smallestItem = min(items, iteratee);
+var smallestItem = min(items, [iteratee]);
 ```
 
 Returns the minimum value in list. If an iteratee function is provided, it will be used on each value to generate the criterion by which the value is ranked. Infinity is returned if list is empty, so an isEmpty guard may be required. Non-numerical values in list will be ignored.
@@ -439,10 +439,10 @@ values({one: 1, two: 2, three: 3});
 
 ```js
 var uniq = require('lowscore/uniq');
-var t = uniq(array);
+var t = uniq(array, [iteratee]);
 ```
 
-Remove duplicate entries from the array.
+Remove duplicate entries from the array. If iteratee is given then the entries uniqueness is based on the result returned by the iteratee. If iteratee is a string instead of a function, uniqueness is based on the property named by iteratee on each of the values.
 
 ```js
 uniq([1, 2, 2, 3, 1, 2]);
